<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.xyl.fly.fragment.HomeFragment"
        android:label="@string/IDS_ANDROID_PRACTICE">
        <action
            android:id="@+id/action_homeFragment_to_baseAnimFragment"
            app:destination="@id/baseAnimFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/baseAnimFragment"
        android:name="com.xyl.fly.fragment.animation.AnimationFragment"
        android:label="@string/IDS_BASE_ANIM_FRAGMENT_TITLE">
        <action
            android:id="@+id/action_baseAnimFragment_to_tweenAnimFragment"
            app:destination="@id/tweenAnimFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_baseAnimFragment_to_propertyAnimFragment"
            app:destination="@id/propertyAnimFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_baseAnimFragment_to_frameAnimFragment"
            app:destination="@id/frameAnimFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/propertyAnimFragment"
        android:name="com.xyl.fly.fragment.animation.PropertyAnimFragment"
        android:label="@string/IDS_PROPERTY_ANIM_FRAGMENT_TITLE" />
    <fragment
        android:id="@+id/tweenAnimFragment"
        android:name="com.xyl.fly.fragment.animation.TweenAnimFragment"
        android:label="@string/IDS_TWEEN_ANIM_FRAGMENT_TITLE" />
    <fragment
        android:id="@+id/frameAnimFragment"
        android:name="com.xyl.fly.fragment.animation.FrameAnimFragment"
        android:label="@string/IDS_FRAME_ANIM_TITLE" />
</navigation>