<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/btn_base_anim_to_tween"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/IDS_TWEEN_ANIM_FRAGMENT_TITLE"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="@id/guideline1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_base_anim_to_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/IDS_FRAME_ANIM_TITLE"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_base_anim_to_property"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/IDS_PROPERTY_ANIM_FRAGMENT_TITLE"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>